--- a/Shape Shifters/Assembly-CSharp-vs.csproj
+++ b/Shape Shifters/Assembly-CSharp-vs.csproj
@@ -160,6 +160,7 @@
      <Compile Include="Assets\Scripts\NextPlane.cs" />
      <Compile Include="Assets\Scripts\Scoring.cs" />
      <Compile Include="Assets\Scripts\StartWall.cs" />
+     <Compile Include="Assets\Scripts\SwitchCanvas.cs" />
      <None Include="Assets\Plugins\Android\google-play-services_lib\res\drawable\common_signin_btn_icon_dark.xml" />
      <None Include="Assets\Plugins\Android\libs\google-play-services_lib\res\values-fi\common_strings.xml" />
      <None Include="Assets\Plugins\Android\libs\google-play-services_lib\res\values-te-rIN\common_strings.xml" />
