--- a/Shape Shifters/Assembly-CSharp-vs.csproj
+++ b/Shape Shifters/Assembly-CSharp-vs.csproj
@@ -151,6 +151,7 @@
      <Compile Include="Assets\Scripts\DisplayScore.cs" />
      <Compile Include="Assets\Scripts\EasyPlayGame.cs" />
      <Compile Include="Assets\Scripts\GameData.cs" />
+     <Compile Include="Assets\Scripts\HardHighScore.cs" />
      <Compile Include="Assets\Scripts\HardNextPlane.cs" />
      <Compile Include="Assets\Scripts\HardPlayGame.cs" />
      <Compile Include="Assets\Scripts\HardStartWall.cs" />
@@ -163,6 +164,7 @@
      <Compile Include="Assets\Scripts\MakeSquare.cs" />
      <Compile Include="Assets\Scripts\MakeTrapezoid.cs" />
      <Compile Include="Assets\Scripts\MakeTriangle.cs" />
+     <Compile Include="Assets\Scripts\MediumHighScore.cs" />
      <Compile Include="Assets\Scripts\MediumNextPlane.cs" />
      <Compile Include="Assets\Scripts\MediumPlayGame.cs" />
      <Compile Include="Assets\Scripts\MediumStartWall.cs" />
